force-app/main/default/objects/Demo__c/fields/Existing_Org_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Existing_Org_Deploy__c</fullName>
    <formula>$CustomMetadata.Deployer_Info__mdt.Production.Base_URL__c+&quot;/byoo?template=https://github.com/&quot; + GitHub_Username__c +&quot;/&quot; + GitHub_Repo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Org Deploy</label>
    <type>Text</type>
</CustomField>