force-app/main/default/objects/Demo__c/fields/GitHub_Repo__c.field-meta.xml
<CustomField>
    <label>GitHub Repo</label>
    <type>Text</type>
    <fullName>GitHub_Repo__c</fullName>
    <length>255</length>
</CustomField>