force-app/main/default/objects/Demo__c/fields/Guide__c.field-meta.xml
<CustomField>
    <label>Guide</label>
    <type>Url</type>
    <fullName>Guide__c</fullName>
</CustomField>