force-app/main/default/objects/Demo__c/fields/Scratch_Org_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Scratch_Org_Deploy__c</fullName>
    <formula>HYPERLINK($CustomMetadata.Deployer_Info__mdt.Production.Base_URL__c+&quot;/launch?template=https://github.com/&quot; +  GitHub_Username__c +&quot;/&quot; +  GitHub_Repo__c, $CustomMetadata.Deployer_Info__mdt.Production.Base_URL__c+&quot;/launch?template=https://github.com/&quot; +  GitHub_Username__c +&quot;/&quot; +  GitHub_Repo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scratch Org Deploy</label>
    <type>Text</type>
</CustomField>