force-app/main/default/objects/Demo__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
                <default>true</default>
                <label>Under Review</label>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Deprecated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>