force-app/main/default/objects/Demo__c/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <label>Video</label>
    <type>Url</type>
</CustomField>