force-app/main/default/objects/Demo__c/listViews/Published.listView-meta.xml
<ListView>
    <fullName>Published</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>GitHub_Repo__c</columns>
    <columns>GitHub_Username__c</columns>
    <columns>Guide__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Published</value>
    </filters>
    <label>Published</label>
</ListView>